@@ -7,6 +7,3 @@ fusermount_SOURCES = fusermount.c
 install-exec-hook:
 	-chown root $(DESTDIR)$(bindir)/fusermount
 	-chmod u+s $(DESTDIR)$(bindir)/fusermount
-
-EXTRA_DIST = 		\
-	mount.fuse
